--- a/styles/3rdParty/_bootstrap.scss
+++ b/styles/3rdParty/_bootstrap.scss
@@ -5,7 +5,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
-@import "~bootstrap/scss/functions";
+//@import "~bootstrap/scss/functions";
 @import "../variables";
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/root";
@@ -22,14 +22,14 @@
 //@import "~bootstrap/scss/button-group";
 @import "~bootstrap/scss/input-group";
 //@import "~bootstrap/scss/custom-forms";
-@import "~bootstrap/scss/nav";
-@import "~bootstrap/scss/navbar";
+//@import "~bootstrap/scss/nav";
+//@import "~bootstrap/scss/navbar";
 //@import "~bootstrap/scss/card";
 //@import "~bootstrap/scss/breadcrumb";
 //@import "~bootstrap/scss/pagination";
-@import "~bootstrap/scss/badge";
+//@import "~bootstrap/scss/badge";
 //@import "~bootstrap/scss/jumbotron";
-@import "~bootstrap/scss/alert";
+//@import "~bootstrap/scss/alert";
 //@import "~bootstrap/scss/progress";
 @import "~bootstrap/scss/media";
 //@import "~bootstrap/scss/list-group";
