--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,6 +1,59 @@
 @import "variables";
 @import "3rdParty/index";
+$width: 280px;
 
+@mixin transition($args...) {
+  -webkit-transition: $args;
+  -moz-transition: $args;
+  -ms-transition: $args;
+  -o-transition: $args;
+  transition: $args;
+}
+
+html, body {
+  background: $body-bg;
+  font-family: Roboto, sans-serif;
+  overflow: hidden;
+}
 .clickable {
   cursor: pointer;
+}
+.control-panel {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  width: $width;
+  @include transition(all 0.5s ease);
+  overflow: hidden;
+  &.hidden {
+    margin-left: -($width - 20);
+  }
+  background: $sidebar-bg;
+}
+.nav {
+  height: 64px;
+  line-height: 64px;
+  padding-left: 20px;
+  width: 100%;
+  align-self: stretch;
+  background: $body-bg-alt;
+}
+.content {
+  display: flex;
+  flex-direction: column;
+  flex:1;
+  height: 100vh;
+  overflow: hidden;
+  .content-inner {
+    margin: 20px;
+    box-shadow: 0 0 6px 2px rgba(200,200,200,.2);
+    border-radius: 4px;
+    background: $body-bg-alt;
+  }
+}
+#__next-build-watcher {
+  display: none;
+}
+#__next-prerender-indicator {
+  display: none;
 }
